Dockerfile + docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,4 +9,4 @@ services:
       - .:/opt/app
     ports:
       - 9090:9090
-    command: /bin/bash -c "CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build main.go && ./main"
+    command: /bin/bash -c "CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build main.go && ./main && sleep infinity"
