--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     working_dir: /opt/app
     volumes:
       - .:/opt/app
+      - /var/jenkins_home:/var/jenkins_home
     ports:
       - 9090:9090
     command: /bin/bash -c "sleep infinity && CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build main.go && ./main"
