--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,7 @@ services:
     container_name: go_app_build_${BUILD_NUMBER}
     working_dir: /opt/app
     volumes:
-      - .:/opt/app
-      - /var/jenkins_home:/var/jenkins_home
+      - /var/jenkins_home/workspace/Test/go_app:/opt/app
     ports:
       - 9090:9090
     command: /bin/bash -c "sleep infinity && CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build main.go && ./main"
