--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     container_name: go_app_build_${BUILD_NUMBER}
     working_dir: /opt/app
     volumes:
-      - ${WORKSPACE}:/opt/app
+      - /var/jenkins_home:/opt/app
     ports:
       - 9090:9090
     command: /bin/bash -c "sleep infinity && CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build main.go && ./main"
