--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,4 @@ services:
       - /root/jenkins/config/workspace/Test/go_app:/opt/app
     ports:
       - 9090:9090
-    command: /bin/bash -c "sleep infinity && CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build main.go && ./main"
+    command: /bin/bash -c "CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build main.go && ./main"
