--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
-  go_app_${BUILD_NUMBER}:
+  go_app:
     image: golang:bullseye
     container_name: go_app_build_${BUILD_NUMBER}
     working_dir: /opt/app
